--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,13 +9,66 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.karmabranch.MainActivity" >
 
-    <Button
-        android:id="@+id/button1"
+    <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="154dp"
-        android:text="GO TO LOGIN" />
+        android:layout_centerVertical="true"
+        android:text="How Much Time To Help Today ?"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Button
+        android:id="@+id/button_5min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="24dp"
+        android:text="5 MIN" />
+
+    <Button
+        android:id="@+id/button_10min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button_5min"
+        android:layout_centerHorizontal="true"
+        android:text="30 MIN" />
+
+    <Button
+        android:id="@+id/button_1hr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button_10min"
+        android:layout_alignRight="@+id/textView1"
+        android:text="1 HR" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_10min"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:text="Or Is There Some Help Needed ?"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="17dp"
+        android:layout_toLeftOf="@+id/button_10min"
+        android:text="LOGIN" />
+
+    <Button
+        android:id="@+id/button_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/button_login"
+        android:layout_alignBottom="@+id/button_login"
+        android:layout_alignRight="@+id/textView2"
+        android:text="REGISTER" />
 
 </RelativeLayout>
