--- a/res/layout/activity_favor_list.xml
+++ b/res/layout/activity_favor_list.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/image3"
     tools:context="com.example.karmabranch.FavorList" >
 
     <Button
@@ -18,6 +18,15 @@
         android:layout_marginRight="19dp"
         android:minHeight="28dp"
         android:minWidth="28dip"
-        android:text="Button" />
+        android:text="View Detail" />
+
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp" >
+    </ListView>
 
 </RelativeLayout>
