--- a/res/layout/activity_user_registration.xml
+++ b/res/layout/activity_user_registration.xml
@@ -3,7 +3,7 @@
     android:id="@+id/GridLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/image2"
+    android:background="@drawable/background2"
     android:columnCount="1"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
